# portada-s-index

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo_improved_workflow.py  publish_uv.sh  pyproject.toml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  INSTALL.md  JSON_GUIDE.md  README.md  development_requiremets.md
examples/: basic_usage.py  file_processing.py  quick_test.py
src/portada_s_index/: __init__.py  algorithms.py  cache.py  cleaning.py  config.py  core.py  embeddings.py  json_interface.py  matrix.py  normalize.py  scoring.py  service.py  similarity.py  strategy.py  utils.py
src/portada_s_index/algorithms/: __init__.py  base.py  lexical.py  phonetic.py  semantic.py
src/portada_s_index/data/: __init__.py  citation.py  voice_list.py
tests/: test_algorithms.py  test_basic.py  test_embeddings.py  test_json_interface.py  test_real_embeddings.py  test_strategy.py  test_utils.py  tests.py
