[project]
name = "portada-s-index"
version = "0.1.1"
description = "Biblioteca de algoritmos de similitud para desambiguación de términos históricos"
readme = "README.md"
authors = [
    { name = "danro-dev", email = "drgrassnk445@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

keywords = ["similarity", "string-matching", "disambiguation", "historical-name", "levenshtein", "jaro-winkler", "ngrams"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/danro-dev/portada-s-index"
Repository = "https://github.com/danro-dev/portada-s-index"
Documentation = "https://github.com/danro-dev/portada-s-index#readme"
"Bug Tracker" = "https://github.com/danro-dev/portada-s-index/issues"

[project.scripts]
portada-s-index = "portada_s_index:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portada_s_index"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
