[project]
name = "portada-s-index"
version = "0.1.22"
description = "Biblioteca de algoritmos de similitud para desambiguación de términos históricos"
readme = "README.md"
authors = [
    { name = "danro-dev", email = "drgrassnk445@gmail.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Core siempre requerido
    "pandas>=2.0",
    "numpy>=1.24",
    # Algoritmos léxicos y fonéticos — sin estos, phonetic_dm y soundex no funcionan
    "metaphone>=0.6",
    "jellyfish>=1.0",
]

[project.optional-dependencies]
# Embeddings densos multilingues (Tex2Vec / SentenceTransformers)
with-embeddings = [
    "sentence-transformers>=2.0",
    "text2vec>=1.3",
]
# Embeddings FastText (requiere compilación C++ en algunos entornos)
with-fasttext = [
    "fasttext>=0.9",
]
# Embeddings ByT5 (pesado, solo si se necesita)
with-byt5 = [
    "transformers>=4.0",
    "torch>=2.0",
]
# Todo incluido
all = [
    "portada-s-index[with-embeddings,with-fasttext,with-byt5]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portada_s_index"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true